Todolist fix (#50)
* Fixed todo removal bug and updated some of its styles

* Fixed more bugs in todolist

* Renamed some css selectors in ScheduleItem

* Fixed add course bug where it didnt create a new chat

* Fixed scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
 	text-align: center;
 	background-color: #d3d3d3;
-	overflow: visible;
+	overflow: hidden;
 }
 
 .App-logo {
