--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -26,6 +26,7 @@
 	line-height: 25px;
 	border-bottom: solid 5px #888888;
 	box-sizing: border-box;
+	margin-bottom: 0px;
 }
 
 #nav form {
@@ -115,7 +116,8 @@
 	width: 80%;
 	height: 95vh;
 	box-sizing: border-box;
-	overflow: auto;
+	overflow-y: auto;
+	overflow-x: hidden;
 	background-color: #d3d3d3;
 	display: block;
 }
