--- a/src/components/StudentItem/StudentItem.css
+++ b/src/components/StudentItem/StudentItem.css
@@ -1,9 +1,9 @@
 /* Search result student card. */
 
 .Students {
-	height: 100%;
+	height: fit-content;
 	width: 100%;
-	overflow: auto;
+	overflow: hidden;
 	margin-top: 15px;
 	margin-bottom: 15px;
 }
